cmake_minimum_required(VERSION 3.20)
project(client_4_0)

set(CMAKE_CXX_STANDARD 14)

include_directories(lib)
include_directories(lib/include)
include_directories(lib/include/internal)
include_directories(lib/include/openssl)

add_executable(client_4_0
        lib/include/internal/bio.h
        lib/include/internal/byteorder.h
        lib/include/internal/comp.h
        lib/include/internal/conf.h
        lib/include/internal/constant_time_locl.h
        lib/include/internal/dane.h
        lib/include/internal/dso.h
        lib/include/internal/err.h
        lib/include/internal/numbers.h
        lib/include/internal/o_dir.h
        lib/include/internal/o_str.h
        lib/include/internal/sdf_int.h
        lib/include/internal/skf_int.h
        lib/include/internal/thread_once.h
        lib/include/openssl/__DECC_INCLUDE_EPILOGUE.H
        lib/include/openssl/__DECC_INCLUDE_PROLOGUE.H
        lib/include/openssl/aes.h
        lib/include/openssl/asn1.h
        lib/include/openssl/asn1_mac.h
        lib/include/openssl/asn1t.h
        lib/include/openssl/async.h
        lib/include/openssl/bio.h
        lib/include/openssl/blowfish.h
        lib/include/openssl/bn.h
        lib/include/openssl/buffer.h
        lib/include/openssl/camellia.h
        lib/include/openssl/cast.h
        lib/include/openssl/cmac.h
        lib/include/openssl/cms.h
        lib/include/openssl/comp.h
        lib/include/openssl/conf.h
        lib/include/openssl/conf_api.h
        lib/include/openssl/crypto.h
        lib/include/openssl/ct.h
        lib/include/openssl/des.h
        lib/include/openssl/dh.h
        lib/include/openssl/dsa.h
        lib/include/openssl/dtls1.h
        lib/include/openssl/e_os2.h
        lib/include/openssl/ebcdic.h
        lib/include/openssl/ec.h
        lib/include/openssl/ecdh.h
        lib/include/openssl/ecdsa.h
        lib/include/openssl/ecies.h
        lib/include/openssl/engine.h
        lib/include/openssl/err.h
        lib/include/openssl/evp.h
        lib/include/openssl/gmapi.h
        lib/include/openssl/gmsdf.h
        lib/include/openssl/gmskf.h
        lib/include/openssl/gmtls.h
        lib/include/openssl/hkdf.h
        lib/include/openssl/hmac.h
        lib/include/openssl/idea.h
        lib/include/openssl/is_gmssl.h
        lib/include/openssl/kdf.h
        lib/include/openssl/kdf2.h
        lib/include/openssl/lhash.h
        lib/include/openssl/md2.h
        lib/include/openssl/md4.h
        lib/include/openssl/md5.h
        lib/include/openssl/mdc2.h
        lib/include/openssl/modes.h
        lib/include/openssl/obj_mac.h
        lib/include/openssl/objects.h
        lib/include/openssl/ocsp.h
        lib/include/openssl/opensslconf.h
        lib/include/openssl/opensslv.h
        lib/include/openssl/ossl_typ.h
        lib/include/openssl/otp.h
        lib/include/openssl/paillier.h
        lib/include/openssl/pem.h
        lib/include/openssl/pem2.h
        lib/include/openssl/pkcs12.h
        lib/include/openssl/pkcs7.h
        lib/include/openssl/rand.h
        lib/include/openssl/rc2.h
        lib/include/openssl/rc4.h
        lib/include/openssl/rc5.h
        lib/include/openssl/ripemd.h
        lib/include/openssl/rsa.h
        lib/include/openssl/safestack.h
        lib/include/openssl/sdf.h
        lib/include/openssl/seed.h
        lib/include/openssl/sgd.h
        lib/include/openssl/sha.h
        lib/include/openssl/skf.h
        lib/include/openssl/sm1.h
        lib/include/openssl/sm2.h
        lib/include/openssl/sm3.h
        lib/include/openssl/sm9.h
        lib/include/openssl/sms4.h
        lib/include/openssl/srp.h
        lib/include/openssl/srtp.h
        lib/include/openssl/ssf33.h
        lib/include/openssl/ssl.h
        lib/include/openssl/ssl2.h
        lib/include/openssl/ssl3.h
        lib/include/openssl/stack.h
        lib/include/openssl/symhacks.h
        lib/include/openssl/tls1.h
        lib/include/openssl/ts.h
        lib/include/openssl/txt_db.h
        lib/include/openssl/ui.h
        lib/include/openssl/whrlpool.h
        lib/include/openssl/x509.h
        lib/include/openssl/x509_vfy.h
        lib/include/openssl/x509v3.h
        lib/include/openssl/zuc.h
        client1.c
        SerCli.c
        SerCli2.c
        SerClitest.c)
